# PDX

./: .gitignore  .gitmodules  BENCHMARKING.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: BenchmarkASYM_U8PDXADSampling  BenchmarkEndToEnd  BenchmarkIMIADSampling  BenchmarkLEP8PDXADSampling  BenchmarkPDXIVF  BenchmarkSerialization  BenchmarkU4PDXADSampling  BenchmarkU6PDXADSampling  BenchmarkU8IMIADSampling  BenchmarkU8NaryLinearScan  BenchmarkU8PDXADSampling  BenchmarkWorkload  CMakeLists.txt  G4NEON  G4SVE  benchmark_adaptiveness.sh  benchmark_block_study.sh  benchmark_dsm.sh  benchmark_exact.sh  benchmark_gather.sh  benchmark_gather_vtune.sh  benchmark_ivf.sh  benchmark_kernels.sh  benchmark_milvus.sh  benchmark_phases.sh  benchmark_sve_vs_neon.sh  benchmark_utils.hpp  pdx_end_to_end.cpp  pdx_filtered.cpp  pdx_insertion.cpp  pdx_ivf.cpp  pdx_ivf2_adsampling_u8_filtered.cpp  pdx_ivf_adsampling_filtered.cpp  pdx_serialization.cpp  pdx_special_filtered.cpp  pdx_workload.cpp  requirements.txt
benchmarks/bench_adsampling/: nary_adsampling.cpp  nary_ivf_adsampling.cpp  nary_ivf_adsampling_simd.cpp  nary_ivf_adsampling_simd_phases.cpp  pdx_end_to_end.cpp  pdx_imi_adsampling.cpp  pdx_imi_adsampling_u8.cpp  pdx_ivf.cpp  pdx_ivf2_adsampling.cpp  pdx_ivf2_adsampling_u8.cpp  pdx_ivf2_adsampling_u8_filtered.cpp  pdx_ivf_adsampling.cpp  pdx_ivf_adsampling_adaptive_32.cpp  pdx_ivf_adsampling_adaptive_inc.cpp  pdx_ivf_adsampling_asymmetric_u8.cpp  pdx_ivf_adsampling_dsm.cpp  pdx_ivf_adsampling_filtered.cpp  pdx_ivf_adsampling_lep_u8.cpp  pdx_ivf_adsampling_phases.cpp  pdx_ivf_adsampling_u4.cpp  pdx_ivf_adsampling_u6.cpp  pdx_ivf_adsampling_u8.cpp  pdx_ivf_adsampling_u8_64.cpp
benchmarks/bench_bond/: pdx_bond.cpp  pdx_bond_dsm.cpp  pdx_bond_ivf.cpp  pdx_bond_ivf_dsm.cpp  pdx_bond_ivf_phases.cpp  pdx_bond_ivf_u8.cpp
benchmarks/bench_bsa/: nary_ivf_bsa_simd.cpp  nary_ivf_bsa_simd_phases.cpp  pdx_ivf_bsa.cpp  pdx_ivf_bsa_dsm.cpp  pdx_ivf_bsa_phases.cpp
benchmarks/bench_kernels/: g4_neon.cpp  g4_sve.cpp  kernels.cpp  nary_gather.cpp  nary_ip.cpp  nary_l1.cpp  nary_l2.cpp  pdx_correctness.cpp  pdx_ip.cpp  pdx_l1.cpp  pdx_l2.cpp  pdx_l2_128.cpp  pdx_l2_16.cpp  pdx_l2_256.cpp  pdx_l2_32.cpp  pdx_l2_512.cpp  pdx_l2_64.cpp
benchmarks/bench_linear/: dsm_linear_scan.cpp  nary_ivf_linear_scan.cpp  nary_linear_scan.cpp  nary_linear_scan_u8.cpp  pdx_linear_scan.cpp  pdx_linear_scan_u8.cpp
benchmarks/bench_selectivity/: pdx_adsampling_parameters_tuning.cpp  pdx_bond_parameters_tuning.cpp
benchmarks/datasets/ground_truth/: agnews-mxbai-1024-euclidean_10_norm  coco-nomic-768-normalized_10_norm  contriever-768_10  contriever-768_10_norm  deep-image-96-angular_10  deep-image-96-angular_10_norm  fashion-mnist-784-euclidean_10  fashion-mnist-784-euclidean_10_norm  gist-960-euclidean_10  gist-960-euclidean_100  gist-960-euclidean_10_norm  glove-200-angular_10  glove-200-angular_10_norm  glove-50-angular_10  glove-50-angular_10_norm  gooaq-distilroberta-768-normalized_10_norm  har-561_10  har-561_100  har-561_100_norm  har-561_10_norm  instructorxl-arxiv-768_10  instructorxl-arxiv-768_100  instructorxl-arxiv-768_10_norm  mnist-784-euclidean_10  mnist-784-euclidean_10_norm  msong-420_10  msong-420_100  msong-420_10_norm  nytimes-16-angular_10  nytimes-16-angular_10_norm  openai-1536-angular_10  openai-1536-angular_100  openai-1536-angular_10_norm  sift-128-euclidean_10  sift-128-euclidean_10_norm  simplewiki-openai-3072-normalized_10_norm  word2vec-300_10  word2vec-300_100  word2vec-300_10_norm
benchmarks/gt/: agnews-mxbai-1024-euclidean_10_norm.json  coco-nomic-768-normalized_10_norm.json  contriever-768_10.json  contriever-768_10_norm.json  deep-image-96-angular_10_norm.json  fashion-mnist-784-euclidean_10.json  fashion-mnist-784-euclidean_10_norm.json  gist-960-euclidean_10.json  gist-960-euclidean_100.json  gist-960-euclidean_10_norm.json  glove-200-angular_10.json  glove-200-angular_10_norm.json  glove-50-angular_10.json  glove-50-angular_10_norm.json  gooaq-distilroberta-768-normalized_10_norm.json  har-561_10.json  har-561_100.json  har-561_100_norm.json  har-561_10_norm.json  instructorxl-arxiv-768_100.json  instructorxl-arxiv-768_10_norm.json  mnist-784-euclidean_10.json  mnist-784-euclidean_10_norm.json  msong-420_10.json  msong-420_100.json  msong-420_10_norm.json  nytimes-16-angular_10.json  nytimes-16-angular_10_norm.json  openai-1536-angular_10.json  sift-128-euclidean_10.json  sift-128-euclidean_10_norm.json  simplewiki-openai-3072-normalized_10_norm.json  word2vec-300_10.json  word2vec-300_100.json  word2vec-300_10_norm.json
benchmarks/milvus/: docker-compose.yml
benchmarks/python_scripts/: WrapperBruteForce.py  WrapperMilvus.py  benchmark_utils.py  exact_faiss.py  exact_milvus.py  exact_sklearn.py  exact_usearch.py  inspect_quantized_data.py  ivf_faiss.py  ivf_faiss_sq8.py  ivf_lorann.py  ivf_milvus.py  ivf_milvus_build.py  playground_adsampling.py  requirements.txt  setup_adsampling.py  setup_adsampling_quantized_data.py  setup_bond.py  setup_bsa.py  setup_core_index.py  setup_data.py  setup_faiss.py  setup_filtered_search.py  setup_fvecs_to_hdf5.py  setup_ground_truth.py  setup_pdx.py  setup_purescan.py  setup_quantized_data.py  setup_settings.py  setup_test_data.py  setup_utils.py
benchmarks/python_scripts/setup_scripts/: WrapperBruteForce.py  setup_adsampling.py  setup_bond.py  setup_bsa.py  setup_core_index.py  setup_data.py  setup_ground_truth.py  setup_settings.py  setup_test_data.py  setup_utils.py
benchmarks/results/: plotter.ipynb
benchmarks/results/DEFAULT/: END_TO_END_PDX_ADSAMPLING.csv  EXACT_FAISS.csv  EXACT_MILVUS.csv  EXACT_PDX.csv  EXACT_PDX_BOND.csv  EXACT_PDX_u8.csv  EXACT_SKLEARN.csv  EXACT_USEARCH.csv  INSERTION_PDX.csv  IVF2_PDX_ADSAMPLING.csv  IVF_BRUTEFORCE.csv  IVF_FAISS.csv  IVF_FAISS_U8.csv  IVF_NARY_ADSAMPLING.csv  IVF_NARY_ADSAMPLING_SIMD.csv  IVF_NARY_BSA.csv  IVF_PDX_ADSAMPLING.csv  IVF_PDX_BOND.csv  IVF_PDX_BSA.csv  PDX_F32_ADSAMPLING.csv  PDX_F32_ADSAMPLING_FILTERED.csv  (+10 more)
(+637 files in other folders)
