set(BENCH_COMMON_LIBS ${MKL_COMMON_LIBS} ${BLAS_LINK_LIBRARIES})

if (FFTW_FOUND)
    message(STATUS "Linking FFTW: ${FFTW_FLOAT_LIB} ${FFTW_FLOAT_OPENMP_LIB}")
    list(APPEND BENCH_COMMON_LIBS ${FFTW_FLOAT_LIB} ${FFTW_FLOAT_OPENMP_LIB})
endif()

add_executable(BenchmarkPDXADSampling bench_adsampling/pdx_ivf_adsampling.cpp)
add_executable(BenchmarkIVF2ADSampling bench_adsampling/pdx_ivf2_adsampling.cpp)
add_executable(BenchmarkU8PDXADSampling bench_adsampling/pdx_ivf_adsampling_u8.cpp)
add_executable(BenchmarkU8IVF2ADSampling bench_adsampling/pdx_ivf2_adsampling_u8.cpp)
add_executable(FilteredBenchmarkU8IVF2ADSampling bench_adsampling/pdx_ivf2_adsampling_u8_filtered.cpp)
add_executable(FilteredBenchmarkPDXADSampling bench_adsampling/pdx_ivf_adsampling_filtered.cpp)
add_executable(BenchmarkEndToEnd bench_adsampling/pdx_end_to_end.cpp)

target_link_libraries(BenchmarkPDXADSampling ${BENCH_COMMON_LIBS})
target_link_libraries(FilteredBenchmarkPDXADSampling ${BENCH_COMMON_LIBS})
target_link_libraries(BenchmarkIVF2ADSampling ${BENCH_COMMON_LIBS})
target_link_libraries(BenchmarkU8PDXADSampling ${BENCH_COMMON_LIBS})
target_link_libraries(BenchmarkU8IVF2ADSampling ${BENCH_COMMON_LIBS})
target_link_libraries(FilteredBenchmarkU8IVF2ADSampling ${BENCH_COMMON_LIBS})
target_link_libraries(BenchmarkEndToEnd ${BENCH_COMMON_LIBS})
